Add vnode handoff status to GUI

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 %% -*- mode: erlang -*-
-{erl_opts, [warnings_as_errors, debug_info]}.
+{erl_opts, [warnings_as_errors, {parse_transform, lager_transform}]}.
 {edoc_opts, [{preprocess, true}]}.
 {cover_enabled, true}.
 {deps, [
