--- a/rebar.config
+++ b/rebar.config
@@ -3,9 +3,9 @@
 {edoc_opts, [{preprocess, true}]}.
 {cover_enabled, true}.
 {deps, [
-       {webmachine, ".*",
-        {git, "git://github.com/basho/webmachine", {branch, "master"}}},
-       {riak_core, ".*",
-        {git, "git://github.com/basho/riak_core", {branch, "master"}}}
+       {webmachine, "1.9.1",
+        {git, "git://github.com/basho/webmachine", {tag, "1.9.1"}}},
+       {riak_core, "1.1.0",
+        {git, "git://github.com/basho/riak_core", {tag, "1.1.0"}}}
        ]}.
 
