--- a/rebar.config
+++ b/rebar.config
@@ -3,11 +3,8 @@
 {edoc_opts, [{preprocess, true}]}.
 {cover_enabled, true}.
 {deps, [
-       {webmachine, ".*",
-        {git, "git://github.com/basho/webmachine", {branch, "master"}}},
-       {riak_core, ".*",
-        {git, "git://github.com/basho/riak_core", {branch, "master"}}},
-       {erlydtl, ".*",
-        {git, "git://github.com/evanmiller/erlydtl.git", {branch, "master"}}}
+       {webmachine, "1.9.2", {git, "git://github.com/basho/webmachine", {tag, "1.9.2"}}},
+       {riak_core, "1.2.0", {git, "git://github.com/basho/riak_core", {branch, "1.2"}}},
+       {erlydtl, "0.7.0", {git, "git://github.com/evanmiller/erlydtl.git", {tag, "8411bacd"}}}
        ]}.
 
