Add js_concatenator and use it to build vendor assets.

--- a/rebar.config
+++ b/rebar.config
@@ -1,13 +1,29 @@
 %% -*- mode: erlang -*-
+
 {erl_opts, [warnings_as_errors, debug_info]}.
+
 {edoc_opts, [{preprocess, true}]}.
+
 {cover_enabled, true}.
+
 {deps, [
        {webmachine, ".*",
         {git, "git://github.com/basho/webmachine", {branch, "master"}}},
        {riak_core, ".*",
         {git, "git://github.com/basho/riak_core", {branch, "master"}}},
        {erlydtl, ".*",
-        {git, "git://github.com/evanmiller/erlydtl.git", {branch, "master"}}}
+        {git, "git://github.com/evanmiller/erlydtl.git", {branch, "master"}}},
+       {rebar_js_concatenator_plugin, ".*",
+        {git, "git://github.com/cmeiklejohn/rebar_js_concatenator_plugin.git", {branch, "master"}}}
        ]}.
 
+{plugins_dir, "deps/rebar_js_concatenator_plugin/src"}.
+{plugins, [rebar_js_concatenator_plugin]}.
+
+{js_concatenator, [
+    {out_dir,    "priv/admin/js"},
+    {doc_root,   "priv/admin/js"},
+    {concatenations, [
+        {"vendor.js", ["jquery-1.7.2.js", "jquery-ui-1.8.16.custom.min.js", "handlebars-1.0.0.beta.6.js", "ember-latest.js", "ember-data-latest.js"], []}
+    ]}
+]}.
