--- a/rebar.config
+++ b/rebar.config
@@ -24,6 +24,6 @@
     {out_dir,    "priv/admin/js"},
     {doc_root,   "priv/admin/js"},
     {concatenations, [
-        {"vendor.js", ["jquery-1.7.2.js", "jquery-ui-1.8.16.custom.min.js", "handlebars-1.0.0.beta.6.js", "ember-latest.js", "ember-data-latest.js"], []}
+        {"vendor.js", ["jquery-1.7.2.js", "jquery-ui-1.8.16.custom.min.js", "handlebars-1.0.0.beta.6.js", "ember-latest.js", "ember-data-latest.js"], [uglify]}
     ]}
 ]}.
