--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,6 @@
 {cover_enabled, true}.
 {deps, [
        {webmachine, "1.9.2", {git, "git://github.com/basho/webmachine", {tag, "1.9.2"}}},
-       {riak_core, "1.2.0", {git, "git://github.com/basho/riak_core", {branch, "1.2"}}},
+       {riak_core, "1.2.0", {git, "git://github.com/basho/riak_core", {tag, "1.2.0"}}},
        {erlydtl, "0.7.0", {git, "git://github.com/evanmiller/erlydtl.git", {tag, "8411bacd"}}}
        ]}.
-
