Add rebar plugins.

--- a/rebar.config
+++ b/rebar.config
@@ -14,3 +14,17 @@
        {erlydtl, ".*",
         {git, "git://github.com/evanmiller/erlydtl.git", {branch, "master"}}}
        ]}.
+
+{plugin_dir, "src"}.
+{plugins, [rebar_js_concatenator_plugin,
+           rebar_js_handlebars_plugin,
+           rebar_js_minispade_plugin,
+           rebar_js_uglifier_plugin]}.
+
+{js_handlebars, [
+    {doc_root,   "priv/admin/js/templates"},
+    {out_dir,    "priv/admin/js"},
+    {target,     "Ember.TEMPLATES"},
+    {compiler,   "Ember.Handlebars.compile"},
+    {templates,  [{"templates", ["application"]}]}
+]}.
