initial commit on this branch

--- a/rebar.config
+++ b/rebar.config
@@ -19,7 +19,8 @@
 {plugins, [rebar_js_concatenator_plugin,
            rebar_js_handlebars_plugin,
            rebar_js_minispade_plugin,
-           rebar_js_uglifier_plugin]}.
+           rebar_js_uglifier_plugin,
+           rebar_js_stylus_plugin]}.
 
 {js_handlebars, [
     {doc_root,   "priv/admin/js/templates"},
@@ -28,3 +29,10 @@
     {compiler,   "Ember.Handlebars.compile"},
     {templates,  [{"templates", ["application", "snapshot", "cluster", "ring", "mapreduce", "partition_filter"]}]}
 ]}.
+
+{js_stylus, [
+    {stylus,   "/usr/local/bin/stylus"},
+    {doc_root, "priv/admin/css"},
+    {out_dir,  "priv/admin/css/compiled"}
+]}.
+
