Add stylus plugin.

--- a/rebar.config
+++ b/rebar.config
@@ -19,6 +19,7 @@
 {plugins, [rebar_js_concatenator_plugin,
            rebar_js_handlebars_plugin,
            rebar_js_minispade_plugin,
+           rebar_js_stylus_plugin,
            rebar_js_uglifier_plugin]}.
 
 {js_handlebars, [
