--- a/rebar.config
+++ b/rebar.config
@@ -16,16 +16,18 @@
        ]}.
 
 {plugin_dir, "src"}.
-{plugins, [rebar_js_concatenator_plugin,
-           rebar_js_handlebars_plugin,
-           rebar_js_minispade_plugin,
-           rebar_js_stylus_plugin,
-           rebar_js_uglifier_plugin]}.
+{plugins, [rebar_js_handlebars_plugin, rebar_js_concatenator_plugin]}.
 
 {js_handlebars, [
     {doc_root,   "priv/admin/js/templates"},
     {out_dir,    "priv/admin/js"},
     {target,     "Ember.TEMPLATES"},
     {compiler,   "Ember.Handlebars.compile"},
-    {templates,  [{"templates", ["application", "snapshot", "cluster", "ring", "partition_filter"]}]}
+    {templates,  [{"templates.js", ["application.hbs", "snapshot.hbs", "cluster.hbs", "ring.hbs", "partition_filter.hbs"]}]}
+]}.
+
+{js_concatenator, [
+    {doc_root,        "priv/admin/js/vendor"},
+    {out_dir,         "priv/admin/js"},
+    {concatenations,  [{"vendor.js", ["jquery-1.7.2.js", "jquery-ui-1.8.16.custom.min.js", "handlebars-1.0.0.beta.6.js", "ember-latest.js", "ember-data-latest.js", "minispade.js"], []}]}
 ]}.
