Break out view, fix bugs in routing API.

--- a/rebar.config
+++ b/rebar.config
@@ -23,7 +23,7 @@
     {out_dir,    "priv/admin/js"},
     {target,     "Ember.TEMPLATES"},
     {compiler,   "Ember.Handlebars.compile"},
-    {templates,  [{"templates.js", ["application.hbs", "snapshot.hbs", "cluster.hbs", "ring.hbs", "partition_filter.hbs"]}]}
+    {templates,  [{"templates.js", ["application.hbs", "snapshot.hbs", "cluster.hbs", "ring.hbs", "partition_filter.hbs", "pagination_item.hbs"]}]}
 ]}.
 
 {js_concatenator, [
