--- a/rebar.config
+++ b/rebar.config
@@ -23,11 +23,11 @@
     {out_dir,    "priv/admin/js"},
     {target,     "Ember.TEMPLATES"},
     {compiler,   "Ember.Handlebars.compile"},
-    {templates,  [{"templates.js", ["application.hbs", "snapshot.hbs", "cluster.hbs", "ring.hbs", "partition_filter.hbs", "pagination_item.hbs"]}]}
+    {templates,  [{"generated/templates.js", ["application.hbs", "snapshot.hbs", "cluster.hbs", "ring.hbs", "partition_filter.hbs", "pagination_item.hbs"]}]}
 ]}.
 
 {js_concatenator, [
     {doc_root,        "priv/admin/js/vendor"},
     {out_dir,         "priv/admin/js"},
-    {concatenations,  [{"vendor.js", ["jquery-1.7.2.js", "jquery-ui-1.8.16.custom.min.js", "handlebars-1.0.0.beta.6.js", "ember-latest.js", "ember-data-latest.js", "minispade.js"], []}]}
+    {concatenations,  [{"generated/vendor.js", ["jquery-1.7.2.js", "jquery-ui-1.8.16.custom.min.js", "handlebars-1.0.0.beta.6.js", "ember-latest.js", "ember-data-latest.js", "minispade.js"], []}]}
 ]}.
