--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 {edoc_opts, [{preprocess, true}]}.
 {cover_enabled, true}.
 {deps, [
-       {webmachine, "1.9.2", {git, "git://github.com/basho/webmachine", {tag, "1.9.2"}}},
+       {webmachine, "1.9.2", {git, "git://github.com/basho/webmachine", {tag, "1.9.2p1"}}},
        {riak_core, "1.2.*", {git, "git://github.com/basho/riak_core", {branch, "1.2"}}},
        {erlydtl, "0.7.0", {git, "git://github.com/evanmiller/erlydtl.git", {tag, "8411bacd"}}}
        ]}.
