Fix riak_core dependency for 1.2.1 release

--- a/rebar.config
+++ b/rebar.config
@@ -4,6 +4,6 @@
 {cover_enabled, true}.
 {deps, [
        {webmachine, "1.9.2", {git, "git://github.com/basho/webmachine", {tag, "1.9.2p1"}}},
-       {riak_core, "1.2.*", {git, "git://github.com/basho/riak_core", {branch, "1.2"}}},
+       {riak_core, "1.2.*", {git, "git://github.com/basho/riak_core", {tag, "1.2.1"}}},
        {erlydtl, "0.7.0", {git, "git://github.com/evanmiller/erlydtl.git", {tag, "8411bacd"}}}
        ]}.
