commented out tools for the new cluster management api, commented out broken stylus plugin in rebar.config

--- a/rebar.config
+++ b/rebar.config
@@ -17,7 +17,7 @@
 
 {plugin_dir, "src"}.
 
-{plugins, [rebar_js_handlebars_plugin, rebar_js_concatenator_plugin, rebar_js_stylus_plugin]}.
+{plugins, [rebar_js_handlebars_plugin, rebar_js_concatenator_plugin]}.
 
 {js_handlebars, [
     {doc_root,   "priv/admin/js/templates"},
@@ -33,9 +33,9 @@
     {concatenations,  [{"generated/vendor.js", ["jquery-1.7.2.js", "jquery-ui-1.8.16.custom.min.js", "handlebars-1.0.0.beta.6.js", "ember-latest.js", "ember-data-latest.js", "minispade.js"], []}]}
 ]}.
 
-{js_stylus, [
-    {stylus,   "/usr/local/bin/stylus"},
-    {doc_root, "priv/admin/css"},
-    {out_dir,  "priv/admin/css/compiled"}
-]}.
+%%{js_stylus, [
+%%    {stylus,   "/usr/local/bin/stylus"},
+%%    {doc_root, "priv/admin/css"},
+%%    {out_dir,  "priv/admin/css/compiled"}
+%%]}.
 
