--- a/rebar.config
+++ b/rebar.config
@@ -33,9 +33,8 @@
     {concatenations,  [{"generated/vendor.js", ["jquery-1.7.2.js", "jquery-ui-1.8.16.custom.min.js", "handlebars-1.0.0.beta.6.js", "ember-latest.js", "ember-data-latest.js", "minispade.js"], []}]}
 ]}.
 
-%%{js_stylus, [
-%%    {stylus,   "/usr/local/bin/stylus"},
-%%    {doc_root, "priv/admin/css"},
-%%    {out_dir,  "priv/admin/css/compiled"}
-%%]}.
-
+{js_stylus, [
+    {stylus,   "/usr/local/bin/stylus"},
+    {doc_root, "priv/admin/css"},
+    {out_dir,  "priv/admin/css/compiled"}
+]}.
