Specify which stylus files to compile.

--- a/rebar.config
+++ b/rebar.config
@@ -17,7 +17,9 @@
 
 {plugin_dir, "src"}.
 
-{plugins, [rebar_js_handlebars_plugin, rebar_js_concatenator_plugin]}.
+{plugins, [rebar_js_handlebars_plugin,
+           rebar_js_stylus_plugin,
+           rebar_js_concatenator_plugin]}.
 
 {js_handlebars, [
     {doc_root,   "priv/admin/js/templates"},
@@ -34,7 +36,8 @@
 ]}.
 
 {js_stylus, [
-    {stylus,   "/usr/local/bin/stylus"},
-    {doc_root, "priv/admin/css"},
-    {out_dir,  "priv/admin/css/compiled"}
+    {stylus,        "/usr/local/bin/stylus"},
+    {doc_root,      "priv/admin/css"},
+    {out_dir,       "priv/admin/css/compiled"},
+    {stylesheets,   ["style.styl"]}
 ]}.
