--- a/rebar.config
+++ b/rebar.config
@@ -36,7 +36,7 @@
 ]}.
 
 {js_stylus, [
-    {stylus,        "/usr/local/bin/stylus"},
+    {stylus_path,   "/usr/local/bin/stylus"},
     {doc_root,      "priv/admin/css"},
     {out_dir,       "priv/admin/css/compiled"},
     {stylesheets,   ["style.styl"]}
