--- a/rebar.config
+++ b/rebar.config
@@ -7,12 +7,12 @@
 {cover_enabled, true}.
 
 {deps, [
-       {webmachine, ".*",
-        {git, "git://github.com/basho/webmachine", {branch, "master"}}},
-       {riak_core, ".*",
-        {git, "git://github.com/basho/riak_core", {branch, "master"}}},
-       {erlydtl, ".*",
-        {git, "git://github.com/evanmiller/erlydtl.git", {branch, "master"}}}
+       {webmachine, "1.9.3",
+        {git, "git://github.com/basho/webmachine", {tag, "1.9.3"}}},
+       {riak_core, "1.3.0",
+        {git, "git://github.com/basho/riak_core", {tag, "1.3.0"}}},
+       {erlydtl, "0.7.0",
+        {git, "git://github.com/evanmiller/erlydtl.git", {tag, "c18f2a00"}}}
        ]}.
 
 {plugin_dir, "src"}.
