Fixes to get dialyzer working.

--- a/rebar.config
+++ b/rebar.config
@@ -4,6 +4,9 @@
 
 {edoc_opts, [{preprocess, true}]}.
 
+{erlydtl_opts, [
+    {compiler_options, [report, return, debug_info]}]}.
+
 {cover_enabled, true}.
 
 {deps, [
