new node_management page; new nav icon; barebones ember setup for routing to new page; fixed responsive problem on ring page

--- a/rebar.config
+++ b/rebar.config
@@ -29,7 +29,7 @@
     {out_dir,    "priv/admin/js"},
     {target,     "Ember.TEMPLATES"},
     {compiler,   "Ember.Handlebars.compile"},
-    {templates,  [{"generated/templates.js", ["application.hbs", "snapshot.hbs", "cluster.hbs", "ring.hbs", "partition_filter.hbs", "pagination_item.hbs", "current_cluster_item.hbs", "staged_cluster_item.hbs"]}]}
+    {templates,  [{"generated/templates.js", ["application.hbs", "snapshot.hbs", "cluster.hbs", "node_management.hbs", "ring.hbs", "partition_filter.hbs", "pagination_item.hbs", "current_cluster_item.hbs", "staged_cluster_item.hbs"]}]}
 ]}.
 
 {js_concatenator, [
