--- a/rebar.config
+++ b/rebar.config
@@ -29,13 +29,30 @@
     {out_dir,    "priv/admin/js"},
     {target,     "Ember.TEMPLATES"},
     {compiler,   "Ember.Handlebars.compile"},
-    {templates,  [{"generated/templates.js", ["application.hbs", "snapshot.hbs", "cluster.hbs", "nodes.hbs", "ring.hbs", "partition_filter.hbs", "pagination_item.hbs", "current_cluster_item.hbs", "current_nodes_item.hbs", "staged_cluster_item.hbs"]}]}
+    {templates,  [{"generated/templates.js", ["application.hbs",
+                                              "snapshot.hbs",
+                                              "cluster.hbs",
+                                              "nodes.hbs",
+                                              "ring.hbs",
+                                              "current_cluster_item.hbs",
+                                              "current_nodes_item.hbs",
+                                              "staged_cluster_item.hbs",
+                                              "partition.hbs",
+                                              "degenerate_preflist_chart.hbs",
+                                              "quorum_unavailable_chart.hbs",
+                                              "all_unavailable_chart.hbs"]}]}
 ]}.
 
 {js_concatenator, [
     {doc_root,        "priv/admin/js/vendor"},
     {out_dir,         "priv/admin/js"},
-    {concatenations,  [{"generated/vendor.js", ["jquery-1.7.2.js", "jquery-ui-1.8.16.custom.min.js", "handlebars-1.0.0.beta.6.js", "ember-latest.js", "ember-data-latest.js", "minispade.js"], []}]}
+    {concatenations,  [{"generated/vendor.js", ["jquery-1.7.2.js",
+                                                "jquery-ui-1.8.16.custom.min.js",
+                                                "handlebars-1.0.0.beta.6.js",
+                                                "ember-latest.js",
+                                                "ember-data-latest.js",
+                                                "minispade.js",
+                                                "d3.v3.min.js"], []}]}
 ]}.
 
 {js_stylus, [
