Start building out handoffs.

--- a/rebar.config
+++ b/rebar.config
@@ -29,7 +29,20 @@
     {out_dir,    "priv/admin/js"},
     {target,     "Ember.TEMPLATES"},
     {compiler,   "Ember.Handlebars.compile"},
-    {templates,  [{"generated/templates.js", ["application.hbs", "snapshot.hbs", "cluster.hbs", "nodes.hbs", "ring.hbs", "partition_filter.hbs", "pagination_item.hbs", "current_cluster_item.hbs", "current_nodes_item.hbs", "staged_cluster_item.hbs", "ring_details.hbs", "handoffs.hbs", "unreachable_nodes.hbs", "bad_node.hbs"]}]}
+    {templates,  [{"generated/templates.js", ["application.hbs",
+                                              "snapshot.hbs",
+                                              "cluster.hbs",
+                                              "nodes.hbs", "ring.hbs",
+                                              "partition_filter.hbs",
+                                              "pagination_item.hbs",
+                                              "current_cluster_item.hbs",
+                                              "current_nodes_item.hbs",
+                                              "staged_cluster_item.hbs",
+                                              "ring_details.hbs",
+                                              "handoffs.hbs",
+                                              "unreachable_nodes.hbs",
+                                              "bad_node.hbs",
+                                              "handoff.hbs"]}]}
 ]}.
 
 {js_concatenator, [
