--- a/rebar.config
+++ b/rebar.config
@@ -48,7 +48,12 @@
 {js_concatenator, [
     {doc_root,        "priv/admin/js/vendor"},
     {out_dir,         "priv/admin/js"},
-    {concatenations,  [{"generated/vendor.js", ["jquery-1.7.2.js", "jquery-ui-1.8.16.custom.min.js", "handlebars-1.0.0.beta.6.js", "ember-latest.js", "ember-data-latest.js", "minispade.js"], []}]}
+    {concatenations,  [{"generated/vendor.js", ["jquery-1.7.2.js",
+                                                "jquery-ui-1.8.16.custom.min.js",
+                                                "handlebars-1.0.0.beta.6.js",
+                                                "ember-latest.js",
+                                                "ember-data-latest.js",
+                                                "minispade.js"], []}]}
 ]}.
 
 {js_stylus, [
