Remove older ring vis.

--- a/rebar.config
+++ b/rebar.config
@@ -37,12 +37,7 @@
                                               "pagination_item.hbs",
                                               "current_cluster_item.hbs",
                                               "current_nodes_item.hbs",
-                                              "staged_cluster_item.hbs",
-                                              "ring_details.hbs",
-                                              "handoffs.hbs",
-                                              "unreachable_nodes.hbs",
-                                              "bad_node.hbs",
-                                              "handoff.hbs"]}]}
+                                              "staged_cluster_item.hbs"]}]}
 ]}.
 
 {js_concatenator, [
