Add partition template and remove unused templates.

--- a/rebar.config
+++ b/rebar.config
@@ -32,12 +32,12 @@
     {templates,  [{"generated/templates.js", ["application.hbs",
                                               "snapshot.hbs",
                                               "cluster.hbs",
-                                              "nodes.hbs", "ring.hbs",
-                                              "partition_filter.hbs",
-                                              "pagination_item.hbs",
+                                              "nodes.hbs",
+                                              "ring.hbs",
                                               "current_cluster_item.hbs",
                                               "current_nodes_item.hbs",
-                                              "staged_cluster_item.hbs"]}]}
+                                              "staged_cluster_item.hbs",
+                                              "partition.hbs"]}]}
 ]}.
 
 {js_concatenator, [
