--- a/rebar.config
+++ b/rebar.config
@@ -48,7 +48,8 @@
                                                 "handlebars-1.0.0.beta.6.js",
                                                 "ember-latest.js",
                                                 "ember-data-latest.js",
-                                                "minispade.js"], []}]}
+                                                "minispade.js",
+                                                "d3.v3.min.js"], []}]}
 ]}.
 
 {js_stylus, [
