--- a/rebar.config
+++ b/rebar.config
@@ -37,7 +37,8 @@
                                               "current_cluster_item.hbs",
                                               "current_nodes_item.hbs",
                                               "staged_cluster_item.hbs",
-                                              "partition.hbs"]}]}
+                                              "partition.hbs",
+                                              "degenerate_preflist_chart.hbs"]}]}
 ]}.
 
 {js_concatenator, [
