Add additional 3 charts.

--- a/rebar.config
+++ b/rebar.config
@@ -38,7 +38,9 @@
                                               "current_nodes_item.hbs",
                                               "staged_cluster_item.hbs",
                                               "partition.hbs",
-                                              "degenerate_preflist_chart.hbs"]}]}
+                                              "degenerate_preflist_chart.hbs",
+                                              "quorum_unavailable_chart.hbs",
+                                              "all_unavailable_chart.hbs"]}]}
 ]}.
 
 {js_concatenator, [
