--- a/rebar.config
+++ b/rebar.config
@@ -40,7 +40,10 @@
                                               "partition.hbs",
                                               "degenerate_preflist_chart.hbs",
                                               "quorum_unavailable_chart.hbs",
-                                              "all_unavailable_chart.hbs"]}]}
+                                              "all_unavailable_chart.hbs",
+                                              "degenerate_preflists.hbs",
+                                              "quorum_unavailable.hbs",
+                                              "all_unavailable.hbs"]}]}
 ]}.
 
 {js_concatenator, [
