--- a/rebar.config
+++ b/rebar.config
@@ -31,6 +31,7 @@
     {compiler,   "Ember.Handlebars.compile"},
     {templates,  [{"generated/templates.js", ["application.hbs",
                                               "snapshot.hbs",
+                                              "stats.hbs",
                                               "cluster.hbs",
                                               "nodes.hbs",
                                               "ring.hbs",
