--- a/rebar.config
+++ b/rebar.config
@@ -11,11 +11,11 @@
 
 {deps, [
        {webmachine, ".*",
-        {git, "git://github.com/basho/webmachine", {branch, "master"}}},
+        {git, "git://github.com/basho/webmachine", {tag, "1.10.2"}}},
        {riak_core, ".*",
-        {git, "git://github.com/basho/riak_core", {branch, "master"}}},
+        {git, "git://github.com/basho/riak_core", {tag, "1.4.0"}}},
        {erlydtl, ".*",
-        {git, "git://github.com/evanmiller/erlydtl.git", {branch, "master"}}}
+        {git, "git://github.com/evanmiller/erlydtl.git", {tag, "d20b53f0"}}}
        ]}.
 
 {plugin_dir, "src"}.
