--- a/rebar.config
+++ b/rebar.config
@@ -50,6 +50,7 @@
                                                 "jquery-ui-1.8.16.custom.min.js",
                                                 "handlebars-1.0.0.beta.6.js",
                                                 "ember-latest.js",
+                                                "ember-visualizations.js",
                                                 "ember-data-latest.js",
                                                 "minispade.js",
                                                 "d3.v3.min.js"], []}]}
