Upgrade to ember-1.0.0 and latest ember-data beta
* Swapped out all the ember related vendored javascript files for the
  new most stable versions
* Rewrote the router to use the new DSL
* Namespaced controller and view
* Removed a lot of code that is now unnecessary due to better defaults

--- a/rebar.config
+++ b/rebar.config
@@ -48,9 +48,9 @@
     {out_dir,         "priv/admin/js"},
     {concatenations,  [{"generated/vendor.js", ["jquery-1.7.2.js",
                                                 "jquery-ui-1.8.16.custom.min.js",
-                                                "handlebars-1.0.0.beta.6.js",
-                                                "ember-latest.js",
-                                                "ember-data-latest.js",
+                                                "handlebars-1.0.0.js",
+                                                "ember-1.0.0.js",
+                                                "ember-data-1.0.0-beta.1.js",
                                                 "minispade.js",
                                                 "d3.v3.min.js"], []}]}
 ]}.
