pointed cuttlefish in rebar.config back to develop

--- a/rebar.config
+++ b/rebar.config
@@ -11,7 +11,7 @@
 
 {deps, [
        {cuttlefish, ".*",
-        {git, "git://github.com/basho/cuttlefish", {branch, "jd-test-tools"}}},
+        {git, "git://github.com/basho/cuttlefish", {branch, "develop"}}},
        {webmachine, ".*",
         {git, "git://github.com/basho/webmachine", {branch, "develop"}}},
        {riak_core, ".*",
