Standardize on a rebar.config dep format to reduce conflicts

--- a/rebar.config
+++ b/rebar.config
@@ -10,14 +10,9 @@
 {cover_enabled, true}.
 
 {deps, [
-       {cuttlefish, ".*",
-        {git, "git://github.com/basho/cuttlefish", {branch, "develop"}}},
-       {webmachine, ".*",
-        {git, "git://github.com/basho/webmachine", {branch, "develop"}}},
-       {riak_core, ".*",
-        {git, "git://github.com/basho/riak_core", {branch, "develop"}}},
-       {erlydtl, ".*",
-        {git, "git://github.com/evanmiller/erlydtl.git", {tag, "d20b53f0"}}}
+       {webmachine, ".*", {git, "git://github.com/basho/webmachine.git", {branch, "develop"}}},
+       {riak_core, ".*", {git, "git://github.com/basho/riak_core.git", {branch, "develop"}}},
+       {erlydtl, ".*", {git, "git://github.com/evanmiller/erlydtl.git", {tag, "d20b53f0"}}}
        ]}.
 
 {plugin_dir, "src"}.
