Ported code from pre-ember conversion
- Create stats.hbs
- Register stats.hbs in rebar.config
- Create stats.js
- Create router code for stats route
- Require stats module in app.js
- Import stats.js in index.dtl
- Create stats nav link in application.hbs
- Create stats.styl
- Import stats.styl in style.styl

--- a/rebar.config
+++ b/rebar.config
@@ -31,6 +31,7 @@
                                               "cluster.hbs",
                                               "nodes.hbs",
                                               "ring.hbs",
+                                              "stats.hbs",
                                               "current_cluster_item.hbs",
                                               "current_nodes_item.hbs",
                                               "staged_cluster_item.hbs",
