--- a/rebar.config
+++ b/rebar.config
@@ -48,10 +48,14 @@
     {concatenations,  [{"generated/vendor.js", ["jquery-1.10.2.js",
                                                 "jquery-ui-1.8.16.custom.min.js",
                                                 "handlebars-1.0.0.js",
+                                                "lodash-2.3.0.min.js",
                                                 "ember-1.0.0.js",
                                                 "ember-data-1.0.0-beta.1.js",
                                                 "minispade.js",
-                                                "d3.v3.min.js"], []}]}
+                                                "d3.v3.min.js",
+                                                "addepar-resize-handler.js",
+                                                "addepar-style-bindings.js",
+                                                "ember-charts.js"], []}]}
 ]}.
 
 {js_stylus, [
