--- a/rebar.config
+++ b/rebar.config
@@ -10,12 +10,9 @@
 {cover_enabled, true}.
 
 {deps, [
-       {webmachine, ".*",
-        {git, "git://github.com/basho/webmachine", {tag, "1.10.4"}}},
-       {riak_core, ".*",
-        {git, "git://github.com/basho/riak_core", {tag, "1.4.2"}}},
-       {erlydtl, ".*",
-        {git, "git://github.com/evanmiller/erlydtl.git", {tag, "d20b53f0"}}}
+       {webmachine, ".*", {git, "git://github.com/basho/webmachine", {tag, "1.10.4"}}},
+       {riak_core, ".*", {git, "git://github.com/basho/riak_core", {tag, "1.4.4"}}},
+       {erlydtl, ".*", {git, "git://github.com/evanmiller/erlydtl.git", {tag, "d20b53f0"}}}
        ]}.
 
 {plugin_dir, "src"}.
