--- a/rebar.config
+++ b/rebar.config
@@ -10,7 +10,7 @@
 {cover_enabled, true}.
 
 {deps, [
-       {webmachine, "1.10.5", {git, "git://github.com/basho/webmachine.git", {tag, "1.10.5"}}},
+       {webmachine, "1.10.5", {git, "git://github.com/basho/webmachine.git", {branch, "vinoski/mochiweb-update"}}},
        {riak_core, ".*", {git, "git://github.com/basho/riak_core.git", {branch, "develop"}}},
        {erlydtl, ".*", {git, "git://github.com/evanmiller/erlydtl.git", {tag, "d20b53f0"}}}
        ]}.
