Add try/catch error handling for rpc:calls to nodes without running rex
try/catch for rex error

Wrapped other rpc:calls with try/catch

Added lager warning messages to rex try/catches

Added lager parse transform to rebar.config

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 %% -*- mode: erlang -*-
 
-{erl_opts, [warnings_as_errors, debug_info]}.
+{erl_opts, [warnings_as_errors, {parse_transform, lager_transform}, debug_info]}.
 
 {edoc_opts, [{preprocess, true}]}.
 
