--- a/rebar.config
+++ b/rebar.config
@@ -11,7 +11,7 @@
 
 {deps, [
        {webmachine, "1.10.8", {git, "git://github.com/basho/webmachine.git", {tag, "1.10.8"}}},
-       {riak_core, ".*", {git, "git://github.com/basho/riak_core.git", {branch, "develop"}}},
+       {riak_core, ".*", {git, "git://github.com/basho/riak_core.git", {tag, "2.1.0"}}},
        {erlydtl, ".*", {git, "git://github.com/evanmiller/erlydtl.git", "d20b53f0"}}
        ]}.
 
