--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ priv/admin/js/generated/templates.js
 priv/admin/js/generated/vendor.js
 tags
 erln8.config
+.local_dialyzer_plt
+dialyzer_unhandled_warnings
+dialyzer_warnings
