--- a/rebar.config
+++ b/rebar.config
@@ -9,13 +9,16 @@
 
 {cover_enabled, true}.
 
+{xref_checks, []}.
+{xref_queries, [{"(XC - UC) || (XU - X - B - \"(cluster_info|dtrace)\" : Mod)", []}]}.
+
 {deps, [
        {webmachine, "1.10.8", {git, "git://github.com/basho/webmachine.git", {tag, "1.10.8"}}},
-       {riak_core, ".*", {git, "git://github.com/basho/riak_core.git", {tag, "2.1.0"}}},
-       {erlydtl, ".*", {git, "git://github.com/evanmiller/erlydtl.git", "d20b53f0"}}
+       {riak_core, ".*", {git, "git://github.com/basho/riak_core.git", {tag, "2.1.1"}}},
+       {erlydtl, ".*", {git, "git://github.com/erlydtl/erlydtl.git", "d20b53f0"}}
        ]}.
 
-{plugin_dir, "src"}.
+{plugin_dir, "plugins"}.
 
 {plugins, [rebar_js_handlebars_plugin,
            rebar_js_stylus_plugin,
