--- a/rebar.config
+++ b/rebar.config
@@ -13,9 +13,9 @@
 {xref_queries, [{"(XC - UC) || (XU - X - B - \"(cluster_info|dtrace)\" : Mod)", []}]}.
 
 {deps, [
-       {webmachine, "1.10.8", {git, "git://github.com/basho/webmachine.git", {tag, "1.10.8"}}},
-       {riak_core, ".*", {git, "git://github.com/basho/riak_core.git", {tag, "2.1.1"}}},
-       {erlydtl, ".*", {git, "git://github.com/erlydtl/erlydtl.git", "d20b53f0"}}
+       {webmachine, ".*", {git, "git://github.com/basho/webmachine.git", {bramch, "feature/otp-17"}}},
+       {riak_core, ".*", {git, "git://github.com/basho/riak_core.git", {bramch, "feature/otp-17"}}},
+       {erlydtl, ".*", {git, "git://github.com/erlydtl/erlydtl.git", {branch, "stable"}}}
        ]}.
 
 {plugin_dir, "plugins"}.
