Force erlydtl to use a current version of eunit_formatters, without resorting to using the unstable erlydtl master branch.

--- a/rebar.config
+++ b/rebar.config
@@ -25,6 +25,10 @@
     {parse_transform, lager_transform}
 ]}.
 {deps, [
+    % Make sure this precedes erlydtl which, as of this writing, will pull
+    % in an older version that doesn't have the fix for namespaced types.
+    {eunit_formatters, ".*", {git, "git://github.com/seancribbs/eunit_formatters", {branch, "master"}}},
+
     {erlydtl, ".*", {git, "git://github.com/erlydtl/erlydtl.git", {branch, "stable"}}},
     {lager, ".*", {git, "git://github.com/basho/lager.git", {branch, "feature/otp-17"}}},
     {riak_core, ".*", {git, "git://github.com/basho/riak_core.git", {branch, "feature/otp-17"}}},
