--- a/rebar.config
+++ b/rebar.config
@@ -13,9 +13,9 @@
 {xref_queries, [{"(XC - UC) || (XU - X - B - \"(cluster_info|dtrace)\" : Mod)", []}]}.
 
 {deps, [
-       {webmachine, "1.10.8", {git, "git://github.com/basho/webmachine.git", {tag, "1.10.8-basho1"}}},
-       {riak_core, ".*", {git, "git://github.com/basho/riak_core.git", {branch, "develop"}}},
-       {erlydtl, ".*", {git, "git://github.com/basho/erlydtl.git", "d20b53f0"}}
+       {webmachine, "1.10.8", {git, "https://github.com/basho/webmachine.git", {tag, "1.10.8-basho1"}}},
+       {riak_core, ".*", {git, "https://github.com/basho/riak_core.git", {branch, "features/lrb/ssl-optional-riak-2913"}}},
+       {erlydtl, ".*", {git, "https://github.com/basho/erlydtl.git", "d20b53f0"}}
        ]}.
 
 {plugin_dir, "plugins"}.
