--- a/rebar.config
+++ b/rebar.config
@@ -15,7 +15,7 @@
 {deps, [
        {webmachine, "1.10.6.*", {git, "git://github.com/basho/webmachine.git", {tag, "1.10.6-basho2"}}},
        {riak_core, ".*", {git, "git://github.com/basho/riak_core.git", {branch, "2.0"}}},
-       {erlydtl, ".*", {git, "git://github.com/erlydtl/erlydtl.git", "d20b53f0"}}
+       {erlydtl, ".*", {git, "git://github.com/basho/erlydtl.git", "d20b53f0"}}
        ]}.
 
 {plugin_dir, "plugins"}.
