--- a/rebar.config
+++ b/rebar.config
@@ -14,7 +14,7 @@
 
 {deps, [
        {webmachine, ".*", {git, "https://github.com/basho/webmachine.git", {tag, "1.10.8p2"}}},
-       {riak_core, ".*", {git, "https://github.com/basho/riak_core.git", {tag, "riak_ts-1.5.1a"}}},
+       {riak_core, ".*", {git, "https://github.com/basho/riak_core.git", {tag, "riak_ts-1.5.1b"}}},
        {erlydtl, ".*", {git, "https://github.com/basho/erlydtl.git", "d20b53f0"}}
        ]}.
 
