--- a/rebar.config
+++ b/rebar.config
@@ -13,8 +13,8 @@
 {xref_queries, [{"(XC - UC) || (XU - X - B - \"(cluster_info|dtrace)\" : Mod)", []}]}.
 
 {deps, [
-       {webmachine, "1.10.8", {git, "git://github.com/basho/webmachine.git", {tag, "1.10.8-basho1"}}},
-       {riak_core, ".*", {git, "git://github.com/basho/riak_core.git", {tag, "2.1.9-225"}}},
+       {webmachine, ".*", {git, "git://github.com/basho/webmachine.git", {branch, "develop-2.9"}}},
+       {riak_core, ".*", {git, "git://github.com/basho/riak_core.git", {branch, "develop-2.9"}}},
        {erlydtl, ".*", {git, "git://github.com/erlydtl/erlydtl.git", "d20b53f0"}}
        ]}.
 
