--- a/rebar.config
+++ b/rebar.config
@@ -13,8 +13,8 @@
 {xref_queries, [{"(XC - UC) || (XU - X - B - \"(cluster_info|dtrace)\" : Mod)", []}]}.
 
 {deps, [
-       {webmachine, ".*", {git, "git://github.com/basho/webmachine.git", {branch, "develop-2.9"}}},
-       {riak_core, ".*", {git, "git://github.com/basho/riak_core.git", {branch, "develop-2.9"}}},
+       {webmachine, ".*", {git, "git://github.com/basho/webmachine.git", {tag, "riak_kv-2.9.1"}}},
+       {riak_core, ".*", {git, "git://github.com/basho/riak_core.git", {tag, "riak_kv-2.9.1"}}},
        {erlydtl, ".*", {git, "git://github.com/erlydtl/erlydtl.git", "d20b53f0"}}
        ]}.
 
