--- a/rebar.config
+++ b/rebar.config
@@ -1,64 +1,61 @@
 %% -*- mode: erlang -*-
+{minimum_otp_vsn, "22.0"}.
 
-{erl_opts, [warnings_as_errors, {parse_transform, lager_transform}, debug_info]}.
+{erl_opts, [warnings_as_errors, debug_info]}.
 
-{edoc_opts, [{preprocess, true}]}.
+{deps, [ {erlydtl, "0.14.0"}
+       , {webmachine, "1.11.1"}
+       , {riak_core, {git, "https://github.com/basho/riak_core.git", {branch, "develop"}}}
+       ]}.
+
+{plugins, [ {rebar_js_concatenator_plugin, {git, "https://github.com/TI-Tokyo/rebar_js_concatenator_plugin.git", {tag, "0.1.0"}}}
+          , {rebar_js_handlebars_plugin, {git, "https://github.com/TI-Tokyo/rebar_js_handlebars_plugin.git", {tag, "0.1.0"}}}
+          ]
+}.
+
+{provider_hooks, [{pre, [{compile, {default, rebar_js_concatenator_plugin}},
+                         {compile, {default, rebar_js_handlebars_plugin}}]}]}.
+
+{js_handlebars, [
+    {doc_root, "priv/admin/js/templates"},
+    {out_dir, "priv/admin/js"},
+    {target, "Ember.TEMPLATES"},
+    {compiler, "Ember.Handlebars.compile"},
+    {templates,  [{"generated/templates.js",
+                   ["application.hbs",
+                    "snapshot.hbs",
+                    "cluster.hbs",
+                    "nodes.hbs",
+                    "ring.hbs",
+                    "current_cluster_item.hbs",
+                    "current_nodes_item.hbs",
+                    "staged_cluster_item.hbs",
+                    "partition.hbs",
+                    "degenerate_preflist_chart.hbs",
+                    "quorum_unavailable_chart.hbs",
+                    "all_unavailable_chart.hbs",
+                    "loading.hbs"]}
+                 ]}
+                ]}.
+
+{js_concatenator, [
+    {doc_root, "priv/admin/js/vendor"},
+    {out_dir, "priv/admin/js"},
+    {concatenations, [{"generated/vendor.js",
+                        ["jquery-1.10.2.js",
+                         "jquery-ui-1.8.16.custom.min.js",
+                         "handlebars-1.0.0.js",
+                         "ember-1.0.0.js",
+                         "ember-data-1.0.0-beta.1.js",
+                         "minispade.js",
+                         "d3.v3.min.js"],
+                        []}
+                      ]}
+                  ]}.
+
 
 {erlydtl_opts, [
     {compiler_options, [report, return, debug_info]}]}.
 
-{cover_enabled, true}.
-
 {xref_checks, []}.
 {xref_queries, [{"(XC - UC) || (XU - X - B - \"(cluster_info|dtrace)\" : Mod)", []}]}.
-
-{deps, [
-       {webmachine, {git, "git://github.com/martincox/webmachine.git", {branch, "develop-3.0"}}},
-       {riak_core, {git, "https://github.com/basho/riak_core.git", {branch, "develop-3.0"}}},
-       {erlydtl, {git, "https://github.com/basho/erlydtl.git", {branch, "develop-3.0"}}}
-       ]}.
-
-{plugin_dir, "plugins"}.
-
-{plugins, [rebar_js_handlebars_plugin,
-           rebar_js_stylus_plugin,
-           rebar_js_concatenator_plugin]}.
-
-{js_handlebars, [
-    {doc_root,   "priv/admin/js/templates"},
-    {out_dir,    "priv/admin/js"},
-    {target,     "Ember.TEMPLATES"},
-    {compiler,   "Ember.Handlebars.compile"},
-    {templates,  [{"generated/templates.js", ["application.hbs",
-                                              "snapshot.hbs",
-                                              "cluster.hbs",
-                                              "nodes.hbs",
-                                              "ring.hbs",
-                                              "current_cluster_item.hbs",
-                                              "current_nodes_item.hbs",
-                                              "staged_cluster_item.hbs",
-                                              "partition.hbs",
-                                              "degenerate_preflist_chart.hbs",
-                                              "quorum_unavailable_chart.hbs",
-                                              "all_unavailable_chart.hbs",
-                                              "loading.hbs"]}]}
-]}.
-
-{js_concatenator, [
-    {doc_root,        "priv/admin/js/vendor"},
-    {out_dir,         "priv/admin/js"},
-    {concatenations,  [{"generated/vendor.js", ["jquery-1.10.2.js",
-                                                "jquery-ui-1.8.16.custom.min.js",
-                                                "handlebars-1.0.0.js",
-                                                "ember-1.0.0.js",
-                                                "ember-data-1.0.0-beta.1.js",
-                                                "minispade.js",
-                                                "d3.v3.min.js"], []}]}
-]}.
-
-{js_stylus, [
-    {stylus_path,   "/usr/local/bin/stylus"},
-    {doc_root,      "priv/admin/css"},
-    {out_dir,       "priv/admin/css/compiled"},
-    {stylesheets,   ["style.styl"]}
-]}.
