fix eunit tests

--- a/rebar.config
+++ b/rebar.config
@@ -54,6 +54,10 @@
                   ]}.
 
 
+{profiles, [
+    {test, [{deps, [{cuttlefish, {git, "https://github.com/TI-Tokyo/cuttlefish", {tag, "2.2.1"}}}]}]}
+]}.
+
 {erlydtl_opts, [
     {compiler_options, [report, return, debug_info]}]}.
 
