--- a/rebar.config
+++ b/rebar.config
@@ -61,5 +61,5 @@
 {erlydtl_opts, [
     {compiler_options, [report, return, debug_info]}]}.
 
-{xref_checks, []}.
-{xref_queries, [{"(XC - UC) || (XU - X - B - \"(cluster_info|dtrace)\" : Mod)", []}]}.
+{xref_checks, [undefined_function_calls, undefined_functions, locals_not_used]}.
+{xref_ignores, [index_dtl]}.
